# confy

./: .gitignore  README.md  pyproject.toml
confy/: __init__.py  argparse_integration.py  cli.py  exceptions.py  loader.py  provenance.py  utils.py
docs/: confy_usage_guide.md
tests/: test_loader.py
tests/v040/: __init__.py  test_phase0_foundation.py  test_phase1_multifile.py  test_phase2_provenance.py
