[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confy"
version = "0.3.5"
description = "Minimal Python configuration library with dot-notation, JSON/TOML, env-var and dict overrides."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [{ name="Araray Velho", email="araray@gmail.com" }]
dependencies = [
    "click>=8.0",
    "python-dotenv>=1.1.0",
    "tomli",
    "tomli-w"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent"
]

[project.scripts]
confy = "confy.cli:cli"

[tool.basedpyright]
typeCheckingMode = "standard"
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportAny = false
reportExplicitAny = false
reportImplicitOverride = false
